--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -7,7 +7,7 @@
         settings.py context processors as 'home.context_processors.settings' -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link href="{% static 'home/styles.css' %}" rel="stylesheet">
 
@@ -18,8 +18,12 @@
             <p class="lead">Here are some samples (Each will open in a new tab):</p>
             <hr class="my-4">
             <ul class="list-group">
-                <li class="list-group-item"><a href="wiki" target="_blank">wiki</a> - A app that use Markdwon <i class="fa fa-language" aria-hidden="true"> language</i> to <strong> CUR </strong> opration.
+                <li class="list-group-item"><a href="network" target="_blank">Social Network</a> - An app that show simple social network. <i class="fa fa-twitter" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can post, edit post, comment on post and Like the post. Also you can follow the others, see your followers posts and edit your profile.</p></li>
+
+                <li class="list-group-item"><a href="wiki" target="_blank">wiki</a> - An app that use Markdwon <i class="fa fa-language" aria-hidden="true"> language</i> to <strong> CUR </strong> opration.
                 <p style="color:gray;">In this app you can create, update and retrieve the pages. Also you can search the pages and randomly select the pages.</p></li>
+            
             </ul>
     </div>
 </body>
