--- a/wiki/templates/wiki/error.html
+++ b/wiki/templates/wiki/error.html
@@ -6,5 +6,5 @@ Error
 
 {% block body %}
 <h1 class="error">{{message}}</h1>
-<a class="btn btn-danger" href={% url 'index' %}> Go back home </a>
+<a class="btn btn-danger" href={% url 'wiki:index' %}> Go back home </a>
 {% endblock %}
