--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -38,25 +38,8 @@
     </div>
 </div>
 
-{% for post in posts %}
-<div class="card m-3">
-    <h5 class="card-header">{{ post.user }}</a></h5>
-    <div class="card-body">
-        <h5 class="card-title">{{post.post}}</h5>
-        <p id="like"> <img src="{% static 'network/img/likedark.png' %}" style="width: 50px;" alt=""> {{post.like}}</p>
-        <p style="float:right;"><small>{{post.pub_date}}</small></p>
-        <a href="#" class="btn btn-primary">Comment</a>
-
-        {% if user == post.user %}
-        <a href="#" class="btn btn-primary" style="margin-left:150px;">Edit</a>
-        {% endif %}
-
-    </div>
+<div>
+    <h5 class="alert alert-info">{{ profile.user }} user posts only.</h5>
+    {% include "network/posts.html" %}
 </div>
-
-
-{% endfor %}
-
-
-
 {% endblock body %}
