--- a/network/templates/network/edit_profile.html
+++ b/network/templates/network/edit_profile.html
@@ -4,11 +4,24 @@
 {% block body %}
 <div class="row">
 <div class="alert alert-warning col-12 mt-2">If you have any of these settings already! This change will effect in your profile.</div>
-<form method="POST" enctype="multipart/form-data">
+<form method="POST" id="upload_form" enctype="multipart/form-data">
     {{ userform.as_p }}
     {{ proform.as_p }}
     <input class="btn btn-info" type="submit" value="Save">
-    <a class="btn btn-light" href="{% url 'profile' user.id %}">Cancel</a>
+    <input class="btn btn-info" type="submit" value="Cancel" onclick="window.location.href='{% url 'network:profile' user.id %}';return false;">
 </form>
 </div>
+<!-- https://stackoverflow.com/questions/2472422/django-file-upload-size-limit -->
+<script>
+$("#upload_form").submit(function() {
+  console.log('Checking file size');
+  if (window.File && window.FileReader && window.FileList && window.Blob) {
+      var file = $('#id_{{ form.upload_field_name }}')[0].files[0];
+      if (file && file.size > {{ form.max_upload_limit }} ) {
+          alert("File " + file.name + " of type " + file.type + " must be < {{ form.max_upload_limit_text }}");
+      return false;
+    }
+  }
+});
+</script>
 {% endblock body %}
