--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="mac">
-        <form action="{% url 'login' %}" method="post">
+        <form action="{% url 'network:login' %}" method="post">
             {% csrf_token %}
            
             <div class="form-group">
@@ -44,7 +44,7 @@
             {% endif %}
 
             <div class="pt-2">
-                Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+                Don't have an account? <a href="{% url 'network:register' %}">Register here.</a>
             </div>
 
         </form>
