--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="mac">
-        <form action="{% url 'login' %}" method="post">
+        <form action="{% url 'network:login' %}" method="post">
             {% csrf_token %}
            
             <div class="form-group">
@@ -28,7 +28,7 @@
             {% endif %}
 
             <div class="pt-2">
-                Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+                Don't have an account? <a href="{% url 'network:register' %}">Register here.</a>
             </div>
         </form>
     </div>
