--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -9,7 +9,7 @@
     </div>
 
 <div class="mac">
-<form action="{% url 'register' %}" method="post">
+<form action="{% url 'network:register' %}" method="post">
     {% csrf_token %}
     <div class="form-group">
         <input required class="form-control" autofocus type="text" name="username" placeholder="Username">
@@ -32,7 +32,7 @@
     {% endif %}
 
     <hr />
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    Already have an account? <a href="{% url 'network:login' %}">Log In here.</a>
 
 </form>
 
