--- a/network/templates/network/edit_profile.html
+++ b/network/templates/network/edit_profile.html
@@ -3,10 +3,9 @@
 
 {% block body %}
 <div class="row">
-<div class="alert alert-warning col-12 mt-2">If you have any of these settings already! This change will effect in your profile.</div>
+<div class="alert alert-warning col-12 mt-2">This change will take effect in your profile.</div>
 <form method="POST" id="upload_form" enctype="multipart/form-data">
-    {{ userform.as_p }}
-    {{ proform.as_p }}
+    {{ form.as_p }}
     <input class="btn btn-info" type="submit" value="Save">
     <input class="btn btn-info" type="submit" value="Cancel" onclick="window.location.href='{% url 'network:profile' user.id %}';return false;">
 </form>
