--- a/home/static/home/styles.css
+++ b/home/static/home/styles.css
@@ -2,3 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: lightcyan;
 }
+
+.mac {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
