--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,7 +1,7 @@
 {% extends "network/layout.html" %}
 {% load static %}
 
-{% block body %}
+{% block content %}
 <div class="content">
     {% if user.is_authenticated %}
     <form method="POST" enctype="multipart/form-data">
@@ -13,7 +13,6 @@
         </div>
 
     </form>
-
     {% include "network/posts.html" %}
 
    {% else %}
@@ -25,30 +24,11 @@
         <p>Login to continue...   user: new, pw: new123</p>
     </div>
 
-    <div class="mac">
-        <form action="{% url 'network:login' %}" method="post">
-            {% csrf_token %}
-           
-            <div class="form-group">
-                <label>Username: </label>
-                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-            </div>
-            <div class="form-group">
-                <label>Password: </label>
-                <input class="form-control" type="password" name="password" placeholder="Password">
-            </div>
-            <input class="btn btn-primary" type="submit" value="Login">
-
-            {% if message %}
-                <div class="alert alert-warning">{{ message }}</div>
-            {% endif %}
 
             <div class="pt-2">
-                Don't have an account? <a href="{% url 'network:register' %}">Register here.</a>
+                <a href="{% url 'login' %}?next={% url 'network:index' %}">Login</a> to explore? 
             </div>
 
-        </form>
-    </div>
     </div>
 
     {% endif %}
