--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -1,18 +1,7 @@
+{% extends "base_template.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <title>{% block title %}Social Network{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <link href="{% static 'network/styles.css' %}" rel="stylesheet">
-    </head>
-
-    <body>
-
+    {% block navbar %} 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,26 +20,14 @@
                         <a class="nav-link" href="{% url 'network:following' %}">Following</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network:logout' %}">Log Out</a>
+                        <a class="nav-link" href="{% url 'logout' %}?next={% url 'network:index' %}">Log Out</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network:login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network:register' %}">Register</a>
+                        <a class="nav-link" href="{% url 'login' %}?next={% url 'network:index' %}">Log In</a>
                     </li>
             {% endif %}
         </div>
     </nav>
 
-
-        <div class="body container">
-            {% block body %}
-            {% endblock %}
-        </div>
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>    </body>
-
-</html>
+{% endblock %}
