--- a/network/templates/network/not_login.html
+++ b/network/templates/network/not_login.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="mac">
-        <form action="{% url 'network:login' %}" method="post">
+        <form action="{% url 'login' %}" method="post">
             {% csrf_token %}
            
             <div class="form-group">
