--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -1,6 +1,6 @@
 {% extends "network/layout.html" %}
 
-{% block body %}
+{% block content %}
     <div class="container">
     <div>
         <h1 class="display-5">Register.</h1>
@@ -31,8 +31,6 @@
         <div class="alert alert-warning">{{ message }}</div>
     {% endif %}
 
-    <hr />
-    Already have an account? <a href="{% url 'network:login' %}">Log In here.</a>
 
 </form>
 
