--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -18,8 +18,8 @@
             <p class="lead">Here are some samples (Each will open in a new tab):</p>
             <hr class="my-4">
             <ul class="list-group">
-                <li class="list-group-item"><a href="auctions" target="_blank">Acutions bidding</a> - An app that show little eBay. <i class="fa fa-twitter" aria-hidden="true"></i>
-                <p style="color:gray;">In this app you can create an item, edit, comment and add to wishlist. Also you can select by category.</p></li>
+                <li class="list-group-item"><a href="auctions" target="_blank">Acutions bidding</a> - An app that show little eBay. <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <p style="color:gray;">In this app you can create an item, edit, comment,add/remove to wishlist, bid on items and select by category. Winner of bid shows if you are the winner.</p></li>
 
                 <li class="list-group-item"><a href="network" target="_blank">Social Network</a> - An app that show simple social network. <i class="fa fa-twitter" aria-hidden="true"></i>
                 <p style="color:gray;">In this app you can post, edit post, comment on post and Like the post. Also you can follow the others, see your followers posts and edit your profile.</p></li>
