--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -1,16 +1,18 @@
 {% extends "auctions/layout.html" %}
 
-{% block body %}
+{% block content %}
 
 <h2>{{title}}</h2>
         {% for category in categories %}
-            <a class="btn btn-outline-primary" href="{% url 'category' category %}">{{ category }}</a></td>
+            <a class="btn btn-outline-primary" href="{% url 'auctions:category' category %}">{{ category }}</a></td>
         {% endfor %}
         <hr>
     <div class="container-fluid card-columns">
     {% for list in listing %}
         <div class="card" style="width: 20em;">
-        <img src="{{ list.new_Img.url }}" class="card-img-top" alt="Image">
+        {% if list.content_type %}
+            <img style="width:100%; border:3px solid black;" src="{% url 'auctions:list_picture' list.id %}">
+        {% endif %}
         <div class="card-body">
             <h3 class="card-title"> {{list.title}} </h3>
             <p class="card-text"> <h5>Details:</h5>{{list.details}} </p>
@@ -27,9 +29,9 @@
             <p>Created date: {{list.created}} </p>
             
             {% if not user.is_authenticated %}
-                <a name="Login" class="btn btn-primary" href="{% url 'login' %}" role="button">Log In to start bid</a>
+                <a name="Login" class="btn btn-primary" href="{% url 'login' %}?next={% url 'auctions:categories' %}" role="button">Log In to start bid</a>
             {% else %}
-                <a name="bid" class="btn btn-info" href="{% url 'listing' list.id %}" role="button">Bid now</a>
+                <a name="bid" class="btn btn-info" href="{% url 'auctions:listing' list.id %}" role="button">Bid now</a>
             {% endif %}
             
             <p>Posted by {{ list.user }}</p>
