--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -2,14 +2,13 @@
 {% load humanize %} <!-- https://docs.djangoproject.com/en/3.0/ref/contrib/humanize -->
 {% block content %}
 
-    <h2>{{ title }}</h2>
+<h2>{{ title }}</h2>
     <div class="container-fluid card-columns">
     {% for list in listing %}
-        <div class="card" style="width: 20em;">
+        <div class="card" style="width: 20rem;">
 
         {% if list.content_type %}
-            <img style="width:90%;margin-top: 50px; border:3px solid black;" src="{% url 'list:list_picture' list.id %}">
-        </div>
+            <img style="width:100%; border:3px solid black;" src="{% url 'auctions:list_picture' list.id %}">
         {% endif %}
 
         <div class="card-body">
@@ -45,12 +44,12 @@
             <p>Created date: {{list.created}} </p>
             
             {% if not user.is_authenticated %}
-                <a name="Login" class="btn btn-primary" href="{% url 'login' %}" role="button">Log In to start bid</a>
+                <a name="Login" class="btn btn-primary" href="{% url 'login' %}?next={% url 'auctions:index' %}" role="button">Log In to start bid</a>
             {% else %}
-                <a name="bid" class="btn btn-info" href="{% url 'listing' list.id %}" role="button">Bid now</a>
+                <a name="bid" class="btn btn-info" href="{% url 'auctions:listing' list.id %}" role="button">Bid now</a>
             {% endif %}
             {% if is_watch %}
-                <a name="bid" class="btn btn-info" href="{% url 'watchlist' list.id %}" role="button">Remove</a>
+                <a name="bid" class="btn btn-info" href="{% url 'auctions:watchlist' list.id %}" role="button">Remove</a>
             {% endif %}
             <p>Posted by {{ list.user }}</p>
 
@@ -59,4 +58,5 @@
     </div>
     {% endfor %}
 </div>
+
 {% endblock %}
