--- a/home/static/home/styles.css
+++ b/home/static/home/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: lightcyan;
+    background-color: rgb(253, 253, 253);
 }
 
 .mac {
