--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -11,7 +11,7 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             {% if user.is_authenticated %}
                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }}</strong></a>
+                        <a class="nav-link" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }} </strong> profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'network:index' %}">All Posts</a>
