--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -2,7 +2,7 @@
 {% load static %}
 
     {% block navbar %} 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,9 +10,6 @@
             <a class="navbar-brand" href="{% url 'network:index' %}">My Social Network</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             {% if user.is_authenticated %}
-                   <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }} </strong> profile</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'network:index' %}">All Posts</a>
                     </li>
@@ -26,6 +23,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}?next={% url 'network:index' %}">Log In</a>
                     </li>
+                {% endif %}
+            </ul>
+            {% if user.is_authenticated %}
+                <a class="navbar-brand" href="{% url 'network:profile' user.id %}">Hi, <strong>{{ user.username }} </strong><small>Go to profile</small></a>
             {% endif %}
         </div>
     </nav>
