--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -2,41 +2,18 @@
 
 {% block content %}
 
-<h2>{{title}}</h2>
-        {% for category in categories %}
-            <a class="btn btn-outline-primary" href="{% url 'auctions:category' category %}">{{ category }}</a></td>
-        {% endfor %}
-        <hr>
-    <div class="container-fluid card-columns">
-    {% for list in listing %}
-        <div class="card" style="width: 20em;">
-        {% if list.content_type %}
-            <img style="width:100%; border:3px solid black;" src="{% url 'auctions:list_picture' list.id %}">
-        {% endif %}
-        <div class="card-body">
-            <h3 class="card-title"> {{list.title}} </h3>
-            <p class="card-text"> <h5>Details:</h5>{{list.details}} </p>
-            <h6> Price: {{list.price}} </h6>
-            <div style="color:Darkblue;">
-            {% if list.no_of_bids > 0 %}
-                <h6>Cur bid: {{ list.cur_price }} </h6>
-                <P>Total no of bids {{ list.no_of_bids }}
-            {% else %}
-                <h6>No bid yet.</h6>
-            {% endif %}
-            </div>
-            <h6>Category: {{list.category}} </h6>
-            <p>Created date: {{list.created}} </p>
-            
-            {% if not user.is_authenticated %}
-                <a name="Login" class="btn btn-primary" href="{% url 'login' %}?next={% url 'auctions:categories' %}" role="button">Log In to start bid</a>
-            {% else %}
-                <a name="bid" class="btn btn-info" href="{% url 'auctions:listing' list.id %}" role="button">Bid now</a>
-            {% endif %}
-            
-            <p>Posted by {{ list.user }}</p>
-        </div>
-    </div>
+<h4 class="diplay-4" >{{ title }}</h4>
+<hr />
+<div class="mb-2 bg-info">
+    {% for category in categories %}
+        <a  style="color:white;" class="btn btn-outline-none" href="{% url 'auctions:category' category %}">{{ category }}</a>
     {% endfor %}
 </div>
+
+<div class="container-fluid card-columns">
+
+    {% include "auctions/items.html" %}
+
+</div>
+
 {% endblock %}
