--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -1,9 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block content %}
-
-<h2>Active Listings</h2>
-
+<h2>{{list.title}}</h2>
 <div class="card mb-3" style="max-width: 100%;">
     <div class="row no-gutters">
         <div class="col-md-4">
@@ -13,31 +11,32 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h3 class="card-title"> {{list.title}} </h3>
-                <p class="card-text">
-                <h5>Details:</h5> {{list.details}} </p>
-                <h6> Price: {{list.price}} </h6>
-                <h6>Cur bid: {{ list.cur_price }} </h6>
-                <P>Total no of bids {{ list.no_of_bids }}
-                <h6>Category: {{list.category}} </h6>
-                <p>Created date: {{list.created}} </p>
+                <p class="card-text">Details: {{list.details}} </p>
+                <hr />
+                <p>Item price: {{list.price}} <span style="color:red; float:right;">Top bid: {{ list.cur_price }} <br /> Total bids: {{ list.no_of_bids }}</span> </p>
+                <br />
+                <hr />
+                                
+                <p><small>Category: </small>{{list.category}} </p>
+                
+                <p class="mt-2"><small>Posted by: </small>{{ list.user }} <span style="float:right; color:gray;"> <small>Created at: {{list.created}}</small> </span> </p>
+                <hr />
 
-
-                {% if message %}
-                <div>{{ message }}</div>
+             {% if not list.closed %}
+             {% if list.user != request.user %}
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <div class="form-group">
+                            <input class="form-control" id="{{ field.id_for_label }}" name="{{ field.html_name }}" placeholder="your {{ field.html_name }}" required /> 
+                        </div>
+                        <input class="btn btn-primary" type="submit" value="Bid">
+                        <div style="color:red;">{{ field.errors }}</div>
+                    {% endfor %}
+                </form>
+                <hr />
                 {% endif %}
 
-                <form method="POST" enctype="multipart/form-data">
-                    <div class="form-group">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                    </div>
-                    <input class="btn btn-primary" type="submit" value="Your bid">
-                </form>
-
-
-                <p>Posted by {{ list.user }}</p>
-                <br />
                 {% if user in list.watchlistuser.all %}
                 <a name="watchlist" class="btn btn-info" href="{% url 'auctions:watchlist' list.id %}" role="button">Remove
                     Watchlist</a>
@@ -46,12 +45,29 @@
                     Watchlist</a>
                 {% endif %}
 
-                <a name="close" class="btn btn-danger" href="{% url 'auctions:closed' list.id %}" role="button">Close</a>
-
+                {% if list.user == request.user %}
+                    <a name="close" class="btn btn-danger" href="{% url 'auctions:closed' list.id %}" role="button">Close</a>
+                {% endif %}
                 <hr>
                 <a name="comment" class="btn btn-info" href="{% url 'auctions:comment' list.id %}" role="button">Comments</a>
+            {% endif %}
+
             </div>
         </div>
     </div>
 </div>
+    <h4 class="mt-4">Comments:</h4>
+    <hr />
+            <div class="comment">
+            {% for comment in list.comments.all %}
+                <div class="row each-comment">
+                    <div class="col">
+                        <p><strong style="color: gray;">{{ comment.user }}</strong> commented: <span class="small" style="color:gray; float: right;"> {{ comment.com_time }} </span></p>
+                        <h5> {{ comment.comment }}</h5>
+                        <hr />
+                    </div>
+                </div>
+            {% endfor %}
+            </div>
+
 {% endblock %}
