--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
 {% endblock %}
 
-{% block title %}Mail{% endblock %}
+{% block title %}Email{% endblock %}
 
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
