--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %}
 {% load static %}
-
+{% block title %}Social Network{% endblock  %}
     {% block navbar %} 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
