--- a/auctions/templates/auctions/items.html
+++ b/auctions/templates/auctions/items.html
@@ -19,6 +19,8 @@
                         {% elif list.current_winning_bidder is None %}
                             <div>Nobody showed any interest on this item and it has been closed.</div>
                         {% else %}
+                            <div style="position:absolute; top:30%; left:20%; border: 2px solid red;
+                            border-radius: 5px; background: white; opacity: 0.7;"><h1 class="p-2">Closed</h1></div>
                             <div>An anonymous user has won this auction!</div>
                         {% endif %}
                     {% endif %}
